# teks

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build  run  test
cmake/: warnings.cmake
modules/app/: CMakeLists.txt
modules/app/src/: main.cpp
modules/app/src/teks/app/: MainWindow.cpp  MainWindow.hpp
modules/app/src/teks/editor/: Document.cpp  Document.hpp  DocumentView.cpp  DocumentView.hpp
modules/core/: CMakeLists.txt
modules/core/include/teks/: assert.hpp  teks.hpp  types.hpp
modules/core/include/teks/buffer/: Buffer.hpp  NewlineStyleSet.hpp  types.hpp
modules/core/include/teks/buffer/internal/: StringBuffer.hpp
modules/core/internal/src/buffer/: StringBuffer.cpp
modules/core/src/: teks.cpp
modules/core/src/buffer/: Buffer.cpp  NewlineStyleSet.cpp
modules/core/test/: CMakeLists.txt  assert_test.cpp  core_tests.cpp
modules/core/test/buffer/: Bytes_test.cpp  NewlineStyleSet_test.cpp  Offset_test.cpp  Range_test.cpp  buffer_contract_test.cpp
